--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -215,7 +215,7 @@ She looked back at the ragtag group of forces she'd gathered and hoped it would 
 \begin{itemize}
   \item \textcolor{darkcandyapplered}{Add a Few Archangels to your army.}
   \item \textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.
-    If you choose not to, you may in the future by spending one \svgeven{movement} at this Obelisk.}
+    If you choose not to, you may in the future by spending one \svg{movement} at this Obelisk.}
 \end{itemize}
 
 
