--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -130,7 +130,7 @@ You lose if any of the following occur:
 \textbf{\nth{12} Round:}
 \begin{itemize}
   \item The Final Charging Enemy Army appears on the Settlement Field of the F3 Tile.
-    This army has 4 \svgeven{movement} per Turn.
+    This army has 4 \svg{movement} per Turn.
 \end{itemize}
 
 \textbf{\nth{16} Round:}
@@ -157,10 +157,10 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
     your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
     you have, lose 3 \svg{gold}, gain \svg{morale_negative}, and randomly discard 1 Card from your hand.
-  \item Enemy Charging Heroes move only 2 \svgeven{movement}. The Final Charging Army moves 4 \svgeven{movement}. They take the shortest
+  \item Enemy Charging Heroes move only 2 \svg{movement}. The Final Charging Army moves 4 \svg{movement}. They take the shortest
     route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not
     ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything
-    else. They also make use of Stables 1 \svgeven{movement} bonus.
+    else. They also make use of Stables 1 \svg{movement} bonus.
   \item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each
     other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.
   \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy
