--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -84,7 +84,7 @@ During this Scenario:
     \begin{enumerate}
       \item \textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have one, gain 6 \svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.
       \item \textbf{[2nd Obelisk]} Increase your \svg{gold}, \svg{building_materials}, or \svg{valuables} income by 1 step.
-      \item \textbf{[3rd Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_positive} and \svgeven{movement}.
+      \item \textbf{[3rd Obelisk]} Roll 2 \svg{treasure} and choose 1 to resolve; then, gain \svg{morale_positive} and \svg{movement}.
       \item \textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.
     \end{enumerate}
     \item \textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:
@@ -105,7 +105,7 @@ During this Scenario:
   \item Players can use their Deck of Might \& Magic when paying gold to defend their Faction Town.
   \item Ignore Combat encounters on the Field with the Grail.
   \item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.
-  \item To obtain the Grail Token, a player’s Hero must spend 2 \svgeven{movement} on the Field with the Grail.
+  \item To obtain the Grail Token, a player’s Hero must spend 2 \svg{movement} on the Field with the Grail.
   \item If a player does not possess the title of ``\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.
   \item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.
   \item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.
