--- a/clash/the_fractured_kingdoms.tex
+++ b/clash/the_fractured_kingdoms.tex
@@ -62,7 +62,7 @@ During this Scenario:
 
 \begin{itemize}
   \item Each \svg[12]{movement_token_green} in the map layout is a one-way monolith.
-    Any Hero on the Field an \svg[12]{movement_token_green} points away from can pay 1 \svgeven{movement} to go to the Field that \svg[12]{movement_token_green} is pointing to.
+    Any Hero on the Field an \svg[12]{movement_token_green} points away from can pay 1 \svg{movement} to go to the Field that \svg[12]{movement_token_green} is pointing to.
   \item You can defend your Town with your Hero if you have your Main Hero on your Starting (I) Map Tile.
 \end{itemize}
 
@@ -76,10 +76,10 @@ Victory Points are counted in accordance to the Tournament book. Additionally, y
 \subsection*{\MakeUppercase{Optional Rules}}
 \begin{itemize}
   \item All \svg[12]{movement_token_green} indicate two-way monoliths instead of one-way.
-    Heroes can travel in either direction by paying 1~\svgeven{movement}.
+    Heroes can travel in either direction by paying 1~\svg{movement}.
   \item The monoliths start inactive (place them the inactive \svg[12]{movement_token_red} side up).
-    Heroes must pay 1~\svg{building_materials} and 1~\svgeven{movement} to activate them.
-  \item Heroes can destroy monoliths by paying 1~\svgeven{movement}.
+    Heroes must pay 1~\svg{building_materials} and 1~\svg{movement} to activate them.
+  \item Heroes can destroy monoliths by paying 1~\svg{movement}.
     Flip a destroyed monolith to the \svg[12]{movement_token_red} side up.
 \end{itemize}
 
