--- a/clash/trial_by_combat.tex
+++ b/clash/trial_by_combat.tex
@@ -42,7 +42,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item All Heroes gain +1 \svgeven{movement}.
+  \item All Heroes gain +1 \svg{movement}.
 \end{itemize}
 \textbf{\nth{2} Round:}
 \begin{itemize}
@@ -58,7 +58,7 @@ When any player first flags ``The Hill'', each player, including the one who fla
 \end{itemize}
 \textbf{\nth{8} Round:}
 \begin{itemize}
-  \item All Heroes gain +1 \svgeven{movement}.
+  \item All Heroes gain +1 \svg{movement}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
