--- a/draft-scenarios/campaigns/rampart_graduation_exercise.tex
+++ b/draft-scenarios/campaigns/rampart_graduation_exercise.tex
@@ -227,7 +227,7 @@ Before you even get a chance to turn back, more than two dozen Medusae slither o
 \textcolor{darkcandyapplered}{
 \begin{itemize}
     \item Medusas remain in their spot on the Far Map Tile regardless of how the Map Tile is rotated after discovery.
-    \item Combat with a Pack of Medusas requires no additional \svgeven{movement-red}.
+    \item Combat with a Pack of Medusas requires no additional \svg{movement-red}.
     \item If a Neutral army is also present on this Map Tile, it must be battled separately after the Medusas are defeated.
 \end{itemize}
 }
