--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -66,8 +66,8 @@ At the end of the \nth{12} Round, if the Dragon Utopia is not flagged by any pla
 \textbf{\nth{1} Round:}
 \begin{itemize}
   \item \nth{1} player gains \svg{morale_negative} Token (for Necropolis, -1 to hand size this turn).
-  \item \nth{2} player gains +1 \svgeven{movement}.
-  \item All the remaining players gain +1 \svgeven{movement}, and \svg{morale_positive} Token (for Necropolis, +1 to hand size this turn).
+  \item \nth{2} player gains +1 \svg{movement}.
+  \item All the remaining players gain +1 \svg{movement}, and \svg{morale_positive} Token (for Necropolis, +1 to hand size this turn).
 \end{itemize}
 
 \textbf{\nth{6} Round:}
