--- a/draft-scenarios/clash/secret_bomb_stash.tex
+++ b/draft-scenarios/clash/secret_bomb_stash.tex
@@ -79,7 +79,7 @@ Players lose if they don't score enough VPs within the designated number of Rurn
 
 \textbf{Every Astrologers Proclaim Round:}
 \begin{itemize}
-  \item Each Hero gains +1 \svgeven{movement}, except for the current bomb carrier.
+  \item Each Hero gains +1 \svg{movement}, except for the current bomb carrier.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -102,7 +102,7 @@ During this Scenario:
 \textbf{The Bomb:}
 
 \begin{itemize}
-  \item The bomb carrier cannot gain extra \svgeven{movement} from any Card, Town Building, Map Location, or any other effect.
+  \item The bomb carrier cannot gain extra \svg{movement} from any Card, Town Building, Map Location, or any other effect.
   \item If your other Hero or an allied Hero is adjacent to the bomb carrier, you can transfer the bomb to them.
   \item If defeated, the bomb is placed on the space where the Hero was defeated and can be claimed by any other Hero by visiting that Field.
 
@@ -121,7 +121,7 @@ During this Scenario:
 \textbf{Obelisks:}
 
 \begin{itemize}
-  \item When first flagged, the Hero gains +1 \svgeven{movement}.
+  \item When first flagged, the Hero gains +1 \svg{movement}.
   \item On each visit (including the first), you can choose to either:
   \begin{itemize}
     \item Move the visiting Hero to any other Obelisk already flagged by you (if that Obelisk is occupied by another Hero, your Hero cannot move there).
