--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -102,7 +102,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
   \item A defeated Main Hero may Empower one Statistic Card from their Deck of M\&M.
   \item With fewer than 6 players, Starting Towns of unused Factions are defended similarly to a Random Town.
   \item Flagging a Neutral Starting Town increases two separate incomes by 1 space.
-  \item When a Hero moves to a Starting Town, that Hero gains +1 \svgeven{movement}.
+  \item When a Hero moves to a Starting Town, that Hero gains +1 \svg{movement}.
 \end{itemize}
 
 \vspace*{\fill}
