--- a/sections/random_scenario.tex
+++ b/sections/random_scenario.tex
@@ -29,7 +29,7 @@ You don't need to fight the Level 7 Combat to capture it.
 You get 1 VP for each Round you hold the Dragon Utopia under your control, no VPs from anything else.
 
 \textbf{Capture the Grail} -- Start a map with the Grail in the middle.
-Standard Grail rules apply: spend 2 \svgeven{movement} to dig it up, and bring it to your Town.
+Standard Grail rules apply: spend 2 \svg{movement} to dig it up, and bring it to your Town.
 \vspace*{\fill}
 \columnbreak
 
@@ -285,7 +285,7 @@ Choose your \textbf{starting conditions} and \textbf{Town strength}.
 
 \textbf{\nth{1} Round:}
 \begin{itemize}
-  \item All Heroes gain +1 \svgeven{movement}.
+  \item All Heroes gain +1 \svg{movement}.
 \end{itemize}
 \textbf{\nth{6} and \nth{9} Rounds:}
 \begin{itemize}
