--- a/translations/castle_sicilian_dragon.tex/cs.po
+++ b/translations/castle_sicilian_dragon.tex/cs.po
@@ -870,14 +870,14 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
 "  \\item \\textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.\n"
-"    If you choose not to, you may in the future by spending one \\svgeven{movement} at this Obelisk.}\n"
+"    If you choose not to, you may in the future by spending one \\svg{movement} at this Obelisk.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Přidejte Hrstku Archandělů do své Armády.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Nyní se můžete teleportovat do nepřátelského Města na Dílku Mapy S1.\n"
-"    Neučiníte-li tak hned, můžete utratit jeden \\svgeven{movement} na tomto Obelisku a cestu uskutečnit.}\n"
+"    Neučiníte-li tak hned, můžete utratit jeden \\svg{movement} na tomto Obelisku a cestu uskutečnit.}\n"
 "\\end{itemize}\n"
 "\n"
 
