--- a/translations/castle_sicilian_dragon.tex/fr.po
+++ b/translations/castle_sicilian_dragon.tex/fr.po
@@ -723,7 +723,7 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
 "  \\item \\textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.\n"
-"    If you choose not to, you may in the future by spending one \\svgeven{movement} at this Obelisk.}\n"
+"    If you choose not to, you may in the future by spending one \\svg{movement} at this Obelisk.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
