--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -877,14 +877,14 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
 "  \\item \\textcolor{darkcandyapplered}{You may now teleport to the enemy town on Tile S1.\n"
-"    If you choose not to, you may in the future by spending one \\svgeven{movement} at this Obelisk.}\n"
+"    If you choose not to, you may in the future by spending one \\svg{movement} at this Obelisk.}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textcolor{darkcandyapplered}{Dodaj Garstkę Archaniołów do swojej armii.}\n"
 "  \\item \\textcolor{darkcandyapplered}{Możesz teraz teleportować się do miasta wroga na Kafelku S1.\n"
-"  Jeśli nie zdecydujesz się na to teraz, możesz to zrobić później, wydając jeden \\svgeven{movement} przy tym Obelisku.}\n"
+"  Jeśli nie zdecydujesz się na to teraz, możesz to zrobić później, wydając jeden \\svg{movement} przy tym Obelisku.}\n"
 "\\end{itemize}\n"
 "\n"
 
