--- a/translations/close_to_enemies.tex/cs.po
+++ b/translations/close_to_enemies.tex/cs.po
@@ -512,7 +512,7 @@ msgid ""
 "  \\item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.\n"
 "  \\item Each player must defend their own Town.\n"
 "  \\item If you have a Citadel, the \\textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \\svg{attack}.\n"
-"  \\item This combat does not cost \\svgeven{movement}.\n"
+"  \\item This combat does not cost \\svg{movement}.\n"
 "  \\item Refer to the \\textit{Enemy Clan Armies} table for siege army strength.\n"
 "  \\item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.\n"
 "  \\item Gain one \\svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.\n"
@@ -526,7 +526,7 @@ msgstr ""
 "  \\item Než bitva začne, můžeš použít svůj Žeton výstaby, Žeton knihy kouzel, Žeton populace a karty Might and Magic. Avšak nemůžeš hýbat hrdinou.\n"
 "  \\item Každý hráč musí ubránit svoje Město.\n"
 "  \\item Pokud máš Citadelu, tak síla útoku \\textit{Střílny} je snížena. Útok pro první/druhou/třetí vlnu nájezdů jsou upraveny na 2/3/4 \\svg{attack}.\n"
-"  \\item Tento souboj nestojí žádné \\svgeven{movement}.\n"
+"  \\item Tento souboj nestojí žádné \\svg{movement}.\n"
 "  \\item Sílu nepřátel zjistíš podle tabulky \\textit{Armády Nepřátelských Klanů}.\n"
 "  \\item Pokud je tvůj hrdina ve Městě spřáteleného hráče (ne v Osadě) ve chvíly, kdy na něj útočí Nepřátelské Armády, může se tvůj hrdina zúčastnit bitvy pomocí vlastních karet \\textit{Might and Magic}. Obléhaný hráč může použít svoje Jednotky, a ty mu můžeš pomoci hraním karet během souboje.\n"
 "  \\item Získej \\svg{experience} pokud úspěšně ubráníš Město, nezáleží na tom, jestli tvůj hlavní hrdina byl v boji přítomen.\n"
@@ -553,7 +553,7 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item The strength of Settlement Defenders is determined by the \\textit{Enemy Clan Armies} table (last row).\n"
 "  \\item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.\n"
-"  \\item The combat does not cost \\svgeven{movement}.\n"
+"  \\item The combat does not cost \\svg{movement}.\n"
 "  \\item In these combats, you must use AI Cards.\n"
 "  \\item After winning a combat, gain 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
@@ -563,7 +563,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Síla Obránců Osady je určena tabulkou \\textit{Armády Nepřátelských Klanů}.\n"
 "  \\item Po vyložení nepřátelské armády může hráč zahodit jednu kartu nepřátelkých Jendotek a vzít novou kartu stejné úrovně.\n"
-"  \\item Souboj nestojí žádné \\svgeven{movement}.\n"
+"  \\item Souboj nestojí žádné \\svg{movement}.\n"
 "  \\item V tomto souboji musíš použít, Balíček karet AI.\n"
 "  \\item Po vyhraném souboji získáš 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
