--- a/translations/close_to_enemies.tex/fr.po
+++ b/translations/close_to_enemies.tex/fr.po
@@ -511,7 +511,7 @@ msgid ""
 "  \\item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.\n"
 "  \\item Each player must defend their own Town.\n"
 "  \\item If you have a Citadel, the \\textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \\svg{attack}.\n"
-"  \\item This combat does not cost \\svgeven{movement}.\n"
+"  \\item This combat does not cost \\svg{movement}.\n"
 "  \\item Refer to the \\textit{Enemy Clan Armies} table for siege army strength.\n"
 "  \\item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.\n"
 "  \\item Gain one \\svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.\n"
@@ -525,7 +525,7 @@ msgstr ""
 "  \\item Avant combat, vous pouvez utiliser vos Jetons Construction, Grimoire et Population, ainsi que des cartes de votre main. Cependant vous ne pouvez pas déplacer votre Héros.\n"
 "  \\item Chaque Joueur défend sa propre Ville.\n"
 "  \\item Si vous avez une Citadelle, l'attaque de la \\textit{Tourelle} est réduite. Son attaque pour les vagues 1/2/3 devient 2/3/4 \\svg{attack}.\n"
-"  \\item Ce combat ne coûte pas de \\svgeven{movement}.\n"
+"  \\item Ce combat ne coûte pas de \\svg{movement}.\n"
 "  \\item Se référer au tableau \\textit{Armée des Clans Ennemis} pour la force des armées de siège.\n"
 "  \\item Si votre Héros est dans une Ville alliée (pas une Enclave) quand un Clan attaque une autre Ville alliée sans Héros présent, vous pouvez aider à défendre en utilisant les cartes de votre main. Le Héros allié utilisera ses Unités et vous pouvez aider avec les cartes de votre main durant le combat.\n"
 "  \\item Gagnez un \\svg{experience} quand vous défendez avec succès votre Ville, avec ou sans la participation du Héros Principal.\n"
@@ -552,7 +552,7 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item The strength of Settlement Defenders is determined by the \\textit{Enemy Clan Armies} table (last row).\n"
 "  \\item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.\n"
-"  \\item The combat does not cost \\svgeven{movement}.\n"
+"  \\item The combat does not cost \\svg{movement}.\n"
 "  \\item In these combats, you must use AI Cards.\n"
 "  \\item After winning a combat, gain 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
@@ -562,7 +562,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item La force des Défenseurs d'Enclave est déterminé par le tableau \\textit{Armée des Clans Ennemis} (dernière ligne).\n"
 "  \\item Après avoir pioché l'armée ennemie, un Joueur peut défausser une Unité ennemie et en piocher une autre de même Rang.\n"
-"  \\item Le combat ne coûtent pas de \\svgeven{movement}.\n"
+"  \\item Le combat ne coûtent pas de \\svg{movement}.\n"
 "  \\item Dans ces combats, vous devez utiliser les Cartes IA.\n"
 "  \\item Après victoire, gagnez 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
