--- a/translations/close_to_enemies.tex/pl.po
+++ b/translations/close_to_enemies.tex/pl.po
@@ -510,7 +510,7 @@ msgid ""
 "  \\item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.\n"
 "  \\item Each player must defend their own Town.\n"
 "  \\item If you have a Citadel, the \\textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \\svg{attack}.\n"
-"  \\item This combat does not cost \\svgeven{movement}.\n"
+"  \\item This combat does not cost \\svg{movement}.\n"
 "  \\item Refer to the \\textit{Enemy Clan Armies} table for siege army strength.\n"
 "  \\item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.\n"
 "  \\item Gain one \\svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.\n"
@@ -524,7 +524,7 @@ msgstr ""
 "  \\item Przed walką możesz użyć swoich Żetonów Budowy i Populacji oraz Księgi Zaklęć, a także Kart Mocy i Magii. Nie możesz jednak przemieszczać swojego Bohatera.\n"
 "  \\item Każdy gracz musi bronić własnego Miasta.\n"
 "  \\item Jeśli masz Cytadelę, atak \\textit{Wieży Łuczniczej} jest zredukowany. Ataki dla pierwszej/drugiej/trzeciej fali wynoszą 2/3/4 \\svg{attack}.\n"
-"  \\item Ta Walka nie kosztuje \\svgeven{movement}.\n"
+"  \\item Ta Walka nie kosztuje \\svg{movement}.\n"
 "  \\item Zajrzyj do tabeli \\textit{Armii Wrogich Klanów}, aby sprawdzić siłę armii oblężniczej.\n"
 "  \\item Jeśli twój Bohater Główny znajduje się w sojuszniczym Mieście (nie Osadzie), gdy Klan atakuje inne sojusznicze Miasto bez obecnego Bohatera Głównego, możesz pomóc w obronie, używając swoich Kart Mocy i Magii. Sojuszniczy Bohater użyje swoich Jednostek, a ty możesz mu pomóc, zagrywając Karty ze swojej ręki podczas Walki.\n"
 "  \\item Zdobądź 1 \\svg{experience} po udanej obronie swojego Miasta, niezależnie od tego, czy twój Bohater Główny brał w niej udział.\n"
@@ -551,7 +551,7 @@ msgid ""
 "\\begin{itemize}\n"
 "  \\item The strength of Settlement Defenders is determined by the \\textit{Enemy Clan Armies} table (last row).\n"
 "  \\item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.\n"
-"  \\item The combat does not cost \\svgeven{movement}.\n"
+"  \\item The combat does not cost \\svg{movement}.\n"
 "  \\item In these combats, you must use AI Cards.\n"
 "  \\item After winning a combat, gain 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
@@ -561,7 +561,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Siła Obrońców Osad jest określana przez tabelę \\textit{Armii Wrogich Klanów} (ostatni wiersz).\n"
 "  \\item Po wylosowaniu armii gracz może odrzucić jedną kartę wrogiej Jednostki i dobrać nową Jednostkę tego samego Poziomu.\n"
-"  \\item Walka nie kosztuje \\svgeven{movement}.\n"
+"  \\item Walka nie kosztuje \\svg{movement}.\n"
 "  \\item W tych walkach musisz używać Kart AI.\n"
 "  \\item Po wygraniu walki zdobywasz 2 \\svg{experience}.\n"
 "\\end{itemize}\n"
