--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -298,14 +298,14 @@ msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Remove all Black Cubes from Water Wheels and Windmills on the map.\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}\n"
+"  \\item All Heroes gain +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "  \\textbf{4. a 8. Kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Odstraňte všechny Černé Kostičky z Vodních Kol a Větrných Mlýnů na mapě.\n"
-"  \\item Všichni Hrdinové získávají +1 \\svgeven{movement}\n"
+"  \\item Všichni Hrdinové získávají +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 
