--- a/translations/dragoncurse_castle.tex/fr.po
+++ b/translations/dragoncurse_castle.tex/fr.po
@@ -297,7 +297,7 @@ msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Remove all Black Cubes from Water Wheels and Windmills on the map.\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}\n"
+"  \\item All Heroes gain +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
