--- a/translations/dragoncurse_castle.tex/pl.po
+++ b/translations/dragoncurse_castle.tex/pl.po
@@ -300,14 +300,14 @@ msgid ""
 "  \\textbf{\\nth{4} and \\nth{8} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item Remove all Black Cubes from Water Wheels and Windmills on the map.\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}\n"
+"  \\item All Heroes gain +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "  \\textbf{4. i 8. Runda:}\n"
 "\\begin{itemize}\n"
 "  \\item Usuń wszystkie Czarne Kostki z Młynów Wodnych i Wiatraków na mapie.\n"
-"  \\item Wszyscy Bohaterowie zyskują +1 \\svgeven{movement}\n"
+"  \\item Wszyscy Bohaterowie zyskują +1 \\svg{movement}\n"
 "\\end{itemize}\n"
 "\n"
 
