--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -330,13 +330,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svgeven{movement}.\n"
+"  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{5. a 9. Kolo (pouze pro Scénář 2 hráčů):}\n"
 "\\begin{itemize}\n"
-"  \\item Druhý hráč získává 1 \\svgeven{movement}.\n"
+"  \\item Druhý hráč získává 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
