--- a/translations/force_of_will.tex/force_of_will.tex.pot
+++ b/translations/force_of_will.tex/force_of_will.tex.pot
@@ -260,7 +260,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svgeven{movement}.\n"
+"  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
