--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -331,13 +331,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svgeven{movement}.\n"
+"  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Manches 5 et 9 (Scénario 2 Joueurs uniquement):}\n"
 "\\begin{itemize}\n"
-"  \\item Le Joueur 2 gagne 1 \\svgeven{movement}.\n"
+"  \\item Le Joueur 2 gagne 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
