--- a/translations/inferno_deal_with_the_devil.tex/inferno_deal_with_the_devil.tex.pot
+++ b/translations/inferno_deal_with_the_devil.tex/inferno_deal_with_the_devil.tex.pot
@@ -480,7 +480,7 @@ msgid ""
 "\\textbf{\\nth{12} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item The Final Charging Enemy Army appears on the Settlement Field of the F3 Tile.\n"
-"    This army has 4 \\svgeven{movement} per Turn.\n"
+"    This army has 4 \\svg{movement} per Turn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -521,10 +521,10 @@ msgid ""
 "    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
 "    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 Card from your hand.\n"
-"  \\item Enemy Charging Heroes move only 2 \\svgeven{movement}. The Final Charging Army moves 4 \\svgeven{movement}. They take the shortest\n"
+"  \\item Enemy Charging Heroes move only 2 \\svg{movement}. The Final Charging Army moves 4 \\svg{movement}. They take the shortest\n"
 "    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
-"    else. They also make use of Stables 1 \\svgeven{movement} bonus.\n"
+"    else. They also make use of Stables 1 \\svg{movement} bonus.\n"
 "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
 "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
 "  \\item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy\n"
