--- a/translations/random_scenario.tex/fr.po
+++ b/translations/random_scenario.tex/fr.po
@@ -212,13 +212,13 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\textbf{Capture the Grail} -- Start a map with the Grail in the middle.\n"
-"Standard Grail rules apply: spend 2 \\svgeven{movement} to dig it up, and bring it to your Town.\n"
+"Standard Grail rules apply: spend 2 \\svg{movement} to dig it up, and bring it to your Town.\n"
 "\\vspace*{\\fill}\n"
 "\\columnbreak\n"
 "\n"
 msgstr ""
 "\\textbf{Capture du Graal} -- Commencez un Plateau avec le Graal au centre.\n"
-"Appliquez les règles standards du Graal: dépensez 2 \\svgeven{movement} pour obtenir le Jeton et l'apporter à votre Ville.\n"
+"Appliquez les règles standards du Graal: dépensez 2 \\svg{movement} pour obtenir le Jeton et l'apporter à votre Ville.\n"
 "\\vspace*{\\fill}\n"
 "\\columnbreak\n"
 "\n"
@@ -653,7 +653,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{\\nth{6} and \\nth{9} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -671,7 +671,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manche 1:}\n"
 "\\begin{itemize}\n"
-"  \\item Les Héros gagnent +1 \\svgeven{movement}.\n"
+"  \\item Les Héros gagnent +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{Manches 6 et 9:}\n"
 "\\begin{itemize}\n"
