--- a/translations/random_scenario.tex/random_scenario.tex.pot
+++ b/translations/random_scenario.tex/random_scenario.tex.pot
@@ -174,7 +174,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\textbf{Capture the Grail} -- Start a map with the Grail in the middle.\n"
-"Standard Grail rules apply: spend 2 \\svgeven{movement} to dig it up, and bring it to your Town.\n"
+"Standard Grail rules apply: spend 2 \\svg{movement} to dig it up, and bring it to your Town.\n"
 "\\vspace*{\\fill}\n"
 "\\columnbreak\n"
 "\n"
@@ -488,7 +488,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{\\nth{6} and \\nth{9} Rounds:}\n"
 "\\begin{itemize}\n"
