--- a/translations/sentinels.tex/de.po
+++ b/translations/sentinels.tex/de.po
@@ -507,7 +507,7 @@ msgstr ""
 #: coops/sentinels.tex:121
 #, no-wrap
 msgid ""
-"  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
+"  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
 "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
@@ -515,7 +515,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Feindliche Armeen haben 3 \\svgeven{movement} pro Runde.\n"
+"  \\item Feindliche Armeen haben 3 \\svg{movement} pro Runde.\n"
 "  \\item Feindliche Armeen bewegen sich am Ende jedes Zugs ab dem Zug, in dem sie erschaffen wurden.\n"
 "  \\item Feindliche Armeen bewegen sich wie in der Anleitung beschrieben (S. 33), aber anstatt einzunehmen, zerstören sie alles auf ihrem Weg.\n"
 "    Platziert Statuswürfel auf allen Feldern, die sie betreten. Diese Felder werden fortan als leer betrachtet.\n"
@@ -538,18 +538,18 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
+"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svg{movement}.\n"
 "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-"    A retreating Main Hero loses all remaining \\svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"    A retreating Main Hero loses all remaining \\svg{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
 "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
 "  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Kämpfe gegen feindliche Armeen, die länger als eine Kampfrunde dauern, kosten keine \\svgeven{movement}.\n"
+"  \\item Kämpfe gegen feindliche Armeen, die länger als eine Kampfrunde dauern, kosten keine \\svg{movement}.\n"
 "  \\item Während eines Kampfes gegen eine feindliche Armee, kann sich der Held zurückziehen, wenn eine seiner Einheiten aktiviert wird.\n"
-"    Beim Rückzug verliert der Hauptheld seine verbliebene \\svgeven{movement}, wird auf eine verbündete Stadt oder Siedlung seiner Wahl gesetzt und behält alle übrig gebliebenen Einheiten.\n"
+"    Beim Rückzug verliert der Hauptheld seine verbliebene \\svg{movement}, wird auf eine verbündete Stadt oder Siedlung seiner Wahl gesetzt und behält alle übrig gebliebenen Einheiten.\n"
 "  \\item Nebenhelden werden beim Rückzug aus dem Spiel entfernt, aber übrig gebliebene Einheiten bleiben im Spiel.\n"
 "  \\item Besiegte feindliche Einheiten erscheinen nicht wieder.\n"
 "\\end{itemize}\n"
