--- a/translations/sentinels.tex/fr.po
+++ b/translations/sentinels.tex/fr.po
@@ -509,7 +509,7 @@ msgstr ""
 #: coops/sentinels.tex:121
 #, no-wrap
 msgid ""
-"  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
+"  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
 "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
@@ -517,7 +517,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Les Armées Ennemies ont 3 \\svgeven{movement} par Manche.\n"
+"  \\item Les Armées Ennemies ont 3 \\svg{movement} par Manche.\n"
 "  \\item Les Armées ennemies se déplacent à la fin de chaque Manche, en commençant par la Manche où elles apparaissent.\n"
 "  \\item Les Armées Ennemies se déplacent selon les règles (p.\\,33), mais à la place de capturer, elles détruisent tout sur leur passage.\n"
 "    Placez un Cube Noir sur les cases qu'elles visitent, ces cases sont maintenant des cases vides.\n"
@@ -540,16 +540,16 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
+"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svg{movement}.\n"
 "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-"    A retreating Main Hero loses all remaining \\svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"    A retreating Main Hero loses all remaining \\svg{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
 "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
 "  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Combattre les Armées Ennemies plus d'un tour de combat ne coûtent pas de \\svgeven{movement}.\n"
+"  \\item Combattre les Armées Ennemies plus d'un tour de combat ne coûtent pas de \\svg{movement}.\n"
 "  \\item Pendant un combat avec une armée ennemie, un Héros peut fuir à l'activation d'une unité alliée.\n"
 "    Un Héros Principal fuyant perd le reste de ses Points de Mouvement et retourne dans une Ville ou une Enclave alliée de son choix en gardant toutes ses unités survivantes.\n"
 "  \\item Un Héros Secondaire fuyant est retiré du jeu, mais le Joueur conserve les unités survivantes.\n"
