--- a/translations/sentinels.tex/sentinels.tex.pot
+++ b/translations/sentinels.tex/sentinels.tex.pot
@@ -396,7 +396,7 @@ msgstr ""
 #: coops/sentinels.tex:121
 #, no-wrap
 msgid ""
-"  \\item Enemy armies have 3 \\svgeven{movement} per Round.\n"
+"  \\item Enemy armies have 3 \\svg{movement} per Round.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies move as described in the rulebook (p.\\,33), but instead of capturing, they destroy everything in their path.\n"
 "    Place Black Cubes on any Field they pass through, treating those Fields as empty from that point on.\n"
@@ -418,9 +418,9 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svgeven{movement}.\n"
+"  \\item Fighting enemy armies over more than one Combat Round does not cost \\svg{movement}.\n"
 "  \\item During a battle with an enemy army, a Hero can retreat whenever a friendly Unit is about to Activate.\n"
-"    A retreating Main Hero loses all remaining \\svgeven{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
+"    A retreating Main Hero loses all remaining \\svg{movement} and is returned to an allied Town or Settlement of their choice, keeping all remaining Units.\n"
 "  \\item Retreating Secondary Heroes are removed from the game, but their remaining Units are kept.\n"
 "  \\item Killed enemy Units do not respawn.\n"
 "\\end{itemize}\n"
