--- a/translations/the_fractured_kingdoms.tex/cs.po
+++ b/translations/the_fractured_kingdoms.tex/cs.po
@@ -286,14 +286,14 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Each \\svg[12]{movement_token_green} in the map layout is a one-way monolith.\n"
-"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svgeven{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
+"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svg{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
 "  \\item You can defend your Town with your Hero if you have your Main Hero on your Starting (I) Map Tile.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Každý \\svg[12]{movement_token_green} na plánu mapy je jednosměrný monolit.\n"
-"    Libovolný Hrdina na Poli s \\svg[12]{movement_token_green} mířícím ven může zaplatit  1 \\svgeven{movement} aby se dostal na Pole kam \\svg[12]{movement_token_green} míří.\n"
+"    Libovolný Hrdina na Poli s \\svg[12]{movement_token_green} mířícím ven může zaplatit  1 \\svg{movement} aby se dostal na Pole kam \\svg[12]{movement_token_green} míří.\n"
 "  \\item Můžete bránit své Město svým Hrdinou, máte-li Hlavního Hrdinu na Startovním (I) Dílku Mapy.\n"
 "\\end{itemize}\n"
 "\n"
@@ -325,10 +325,10 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Optional Rules}}\n"
 "\\begin{itemize}\n"
 "  \\item All \\svg[12]{movement_token_green} indicate two-way monoliths instead of one-way.\n"
-"    Heroes can travel in either direction by paying 1~\\svgeven{movement}.\n"
+"    Heroes can travel in either direction by paying 1~\\svg{movement}.\n"
 "  \\item The monoliths start inactive (place them the inactive \\svg[12]{movement_token_red} side up).\n"
-"    Heroes must pay 1~\\svg{building_materials} and 1~\\svgeven{movement} to activate them.\n"
-"  \\item Heroes can destroy monoliths by paying 1~\\svgeven{movement}.\n"
+"    Heroes must pay 1~\\svg{building_materials} and 1~\\svg{movement} to activate them.\n"
+"  \\item Heroes can destroy monoliths by paying 1~\\svg{movement}.\n"
 "    Flip a destroyed monolith to the \\svg[12]{movement_token_red} side up.\n"
 "\\end{itemize}\n"
 "\n"
@@ -336,10 +336,10 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Volitelná Pravidla}}\n"
 "\\begin{itemize}\n"
 "  \\item Všechny \\svg[12]{movement_token_green} označují dvousměrné monolity místo jednosměrných.\n"
-"    Hrdinové smí cestovat oběma směry zaplacením 1~\\svgeven{movement}.\n"
+"    Hrdinové smí cestovat oběma směry zaplacením 1~\\svg{movement}.\n"
 "  \\item Monolity jsou na začátku neaktivní (otočte \\svg[12]{movement_token_red} stranou nahoru).\n"
-"    Hrdinové musí zaplatit 1~\\svg{building_materials} a 1~\\svgeven{movement} aby Monolit aktivovali.\n"
-"  \\item Hrdinové mohou Monolit zničit zaplacením 1~\\svgeven{movement}.\n"
+"    Hrdinové musí zaplatit 1~\\svg{building_materials} a 1~\\svg{movement} aby Monolit aktivovali.\n"
+"  \\item Hrdinové mohou Monolit zničit zaplacením 1~\\svg{movement}.\n"
 "    Otočte zničený Monolit \\svg[12]{movement_token_red} stranou nahoru.\n"
 "\\end{itemize}\n"
 "\n"
