--- a/translations/the_fractured_kingdoms.tex/de.po
+++ b/translations/the_fractured_kingdoms.tex/de.po
@@ -259,7 +259,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Each \\svg[12]{movement_token_green} in the map layout is a one-way monolith.\n"
-"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svgeven{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
+"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svg{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
 "  \\item You can defend your Town with your Hero if you have your Main Hero on your Starting (I) Map Tile.\n"
 "\\end{itemize}\n"
 "\n"
@@ -285,10 +285,10 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Optional Rules}}\n"
 "\\begin{itemize}\n"
 "  \\item All \\svg[12]{movement_token_green} indicate two-way monoliths instead of one-way.\n"
-"    Heroes can travel in either direction by paying 1~\\svgeven{movement}.\n"
+"    Heroes can travel in either direction by paying 1~\\svg{movement}.\n"
 "  \\item The monoliths start inactive (place them the inactive \\svg[12]{movement_token_red} side up).\n"
-"    Heroes must pay 1~\\svg{building_materials} and 1~\\svgeven{movement} to activate them.\n"
-"  \\item Heroes can destroy monoliths by paying 1~\\svgeven{movement}.\n"
+"    Heroes must pay 1~\\svg{building_materials} and 1~\\svg{movement} to activate them.\n"
+"  \\item Heroes can destroy monoliths by paying 1~\\svg{movement}.\n"
 "    Flip a destroyed monolith to the \\svg[12]{movement_token_red} side up.\n"
 "\\end{itemize}\n"
 "\n"
