--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -286,14 +286,14 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Each \\svg[12]{movement_token_green} in the map layout is a one-way monolith.\n"
-"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svgeven{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
+"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svg{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
 "  \\item You can defend your Town with your Hero if you have your Main Hero on your Starting (I) Map Tile.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Chaque \\svg[12]{movement_token_green} sur le Plateau est un monolithe à sens unique.\n"
-"    Un Héros sur une Case avec une \\svg[12]{movement_token_green} vers l'extérieur peut payer 1~\\svgeven{movement} pour aller sur la Case pointée par la \\svg[12]{movement_token_green}.\n"
+"    Un Héros sur une Case avec une \\svg[12]{movement_token_green} vers l'extérieur peut payer 1~\\svg{movement} pour aller sur la Case pointée par la \\svg[12]{movement_token_green}.\n"
 "  \\item Vous pouvez défendre votre Ville avec votre Héros si votre Héros Principal est sur la Tuile de Départ (I).\n"
 "\\end{itemize}\n"
 "\n"
@@ -325,10 +325,10 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Optional Rules}}\n"
 "\\begin{itemize}\n"
 "  \\item All \\svg[12]{movement_token_green} indicate two-way monoliths instead of one-way.\n"
-"    Heroes can travel in either direction by paying 1~\\svgeven{movement}.\n"
+"    Heroes can travel in either direction by paying 1~\\svg{movement}.\n"
 "  \\item The monoliths start inactive (place them the inactive \\svg[12]{movement_token_red} side up).\n"
-"    Heroes must pay 1~\\svg{building_materials} and 1~\\svgeven{movement} to activate them.\n"
-"  \\item Heroes can destroy monoliths by paying 1~\\svgeven{movement}.\n"
+"    Heroes must pay 1~\\svg{building_materials} and 1~\\svg{movement} to activate them.\n"
+"  \\item Heroes can destroy monoliths by paying 1~\\svg{movement}.\n"
 "    Flip a destroyed monolith to the \\svg[12]{movement_token_red} side up.\n"
 "\\end{itemize}\n"
 "\n"
@@ -336,10 +336,10 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Règles Optionnelles}}\n"
 "\\begin{itemize}\n"
 "  \\item Les \\svg[12]{movement_token_green} indiquent des monolithes double sens.\n"
-"    Les Héros peuvent se déplacer dans les deux directions en payant 1~\\svgeven{movement}.\n"
+"    Les Héros peuvent se déplacer dans les deux directions en payant 1~\\svg{movement}.\n"
 "  \\item Les monolithes commencent inactifs (placez la face inactive \\svg[12]{movement_token_red} visible).\n"
-"    Un Héros doit payer 1~\\svg{building_materials} et 1~\\svgeven{movement} pour l'activer.\n"
-"  \\item Un Héros peut détruire un monolith en payant 1~\\svgeven{movement}.\n"
+"    Un Héros doit payer 1~\\svg{building_materials} et 1~\\svg{movement} pour l'activer.\n"
+"  \\item Un Héros peut détruire un monolith en payant 1~\\svg{movement}.\n"
 "    Retournez un monolith détruit sur la face \\svg[12]{movement_token_red}.\n"
 "\\end{itemize}\n"
 "\n"
