--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -469,7 +469,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "  \\item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.\n"
-"  \\item Combat in the Titans' Stronghold now costs 1 \\svgeven{movement} to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
+"  \\item Combat in the Titans' Stronghold now costs 1 \\svg{movement} to extend per Combat Round, just like Combat against non-Azure tier Units.\n"
 "  \\item Additionally, no player can:\n"
 "  \\begin{itemize}\n"
 "    \\item Attack other Heroes.\n"
@@ -479,7 +479,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Chaque fois qu'un Héros entre dans la Forteresse des Titans, il pioche 5 cartes du deck de l'armée de la Forteresse des Titans à la place des piles habituelles. Ces Unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur tente de vaincre les créatures ainsi piochées. Toutes les unités neutres vaincues sont remises dans leurs piles respectives, plutôt que dans le deck spécial. Toutes les unités neutres qui survivent à un combat dans la Forteresse des Titans sont remélangées dans le deck de l'armée de la Forteresse des Titans. S'il y reste moins de 5 unités dans le deck de l'armée de la Forteresse des Titans, placez uniquement les unités restantes sur le plateau de combat.\n"
-"  \\item Prolonger un combat dans la Forteresse des Titans coûte 1 \\svgeven{movement} par Tour de Combat, comme pour un combat contre des unités non azures.\n"
+"  \\item Prolonger un combat dans la Forteresse des Titans coûte 1 \\svg{movement} par Tour de Combat, comme pour un combat contre des unités non azures.\n"
 "  \\item Par ailleurs, les joueurs ne peuvent pas :\n"
 "  \\begin{itemize}\n"
 "    \\item Attaquer les autres Héros.\n"
