--- a/translations/trial_by_combat.tex/de.po
+++ b/translations/trial_by_combat.tex/de.po
@@ -217,7 +217,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
@@ -233,7 +233,7 @@ msgid ""
 "\\end{itemize}\n"
 "\\textbf{\\nth{8} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
