--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -200,7 +200,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{\\nth{2} Round:}\n"
 "\\begin{itemize}\n"
@@ -216,14 +216,14 @@ msgid ""
 "\\end{itemize}\n"
 "\\textbf{\\nth{8} Round:}\n"
 "\\begin{itemize}\n"
-"  \\item All Heroes gain +1 \\svgeven{movement}.\n"
+"  \\item All Heroes gain +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{évènements programmés}}\n"
 "\\textbf{Manche 1:}\n"
 "\\begin{itemize}\n"
-"  \\item Les Héros gagnent +1 \\svgeven{movement}.\n"
+"  \\item Les Héros gagnent +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 2:}\n"
 "\\begin{itemize}\n"
@@ -239,7 +239,7 @@ msgstr ""
 "\\end{itemize}\n"
 "\\textbf{Manche 8:}\n"
 "\\begin{itemize}\n"
-"  \\item Les Héros gagnent +1 \\svgeven{movement}.\n"
+"  \\item Les Héros gagnent +1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
