--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -60,7 +60,7 @@ However, if the Random Town is first captured in the \nth{10} Round, the game pr
   \textbf{\nth{4} and \nth{8} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from Water Wheels and Windmills on the map.
-  \item All Heroes gain +1 \svgeven{movement}
+  \item All Heroes gain +1 \svg{movement}
 \end{itemize}
 
 \end{multicols*}
