--- a/coops/close_to_enemies.tex
+++ b/coops/close_to_enemies.tex
@@ -121,7 +121,7 @@ Prepare an AI Deck for Settlement defenders.
   \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
   \item Each player must defend their own Town.
   \item If you have a Citadel, the \textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \svg{attack}.
-  \item This combat does not cost \svgeven{movement}.
+  \item This combat does not cost \svg{movement}.
   \item Refer to the \textit{Enemy Clan Armies} table for siege army strength.
   \item If your main Hero is in an allied Town (not Settlement) when a Clan attacks another allied Town without a main Hero present, you may help defend using your Might and Magic Cards. The allied Hero will use their Units, and you can help them by playing Cards from your hand during combat.
   \item Gain one \svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.
@@ -134,7 +134,7 @@ Prepare an AI Deck for Settlement defenders.
 \begin{itemize}
   \item The strength of Settlement Defenders is determined by the \textit{Enemy Clan Armies} table (last row).
   \item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.
-  \item The combat does not cost \svgeven{movement}.
+  \item The combat does not cost \svg{movement}.
   \item In these combats, you must use AI Cards.
   \item After winning a combat, gain 2 \svg{experience}.
 \end{itemize}
