--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -81,9 +81,9 @@ If no one controls a Dragon Utopia, all players lose.
 \begin{itemize}
   \item \textbf{Grail Token}: When a player gains or starts their turn with it, they gain +1 \svg{morale_positive} and Search (2) \svg{spellpower} or \svg{artifact}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
-  \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svgeven{movement} for the next Round.
+  \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
   \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
-  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space, Draw 2 Cards and gain +1 \svgeven{movement}.
+  \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space, Draw 2 Cards and gain +1 \svg{movement}.
   \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
@@ -100,7 +100,7 @@ If no one controls a Dragon Utopia, all players lose.
 
 \begin{itemize}
   \item When a \textbf{Secondary Hero} is recruited, you gain an additional Empowerment and one of each: Attack, Defense and Power Statistic Cards, and a Magic Arrow. These may only be used by your Secondary Hero.
-  \item When a Secondary Hero starts their turn on a I or II--III Map Tile, they gain +1~\svgeven{movement}.
+  \item When a Secondary Hero starts their turn on a I or II--III Map Tile, they gain +1~\svg{movement}.
 \end{itemize}
 
 \begin{center}
