--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -74,14 +74,14 @@ Players get VPs for:
   \item Players can't attack their opponent's starting Town.
   \item Players can only attack another player once each turn.
   \item Players do not lose gold for losing or retreating from any Combat.
-  \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svgeven{movement}.
+  \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svg{movement}.
   \item After losing a Combat, the defeated Hero is moved to its starting Town.
   \item After PvP Combat, both players gain their lost \bronze\ and \silver\ Units back.
   \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item ``The Hill'' Combat reward: 20 \svg{gold}.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitable once per Faction.}
-  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10 \svg{gold} and resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
+  \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svg{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10 \svg{gold} and resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
 \columnbreak
