--- a/draft-scenarios/clash/obelisk.tex
+++ b/draft-scenarios/clash/obelisk.tex
@@ -44,7 +44,7 @@ wins the game. If none of the Victory Conditions are met or in the case of a tie
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item \textbf{Obelisk:} If you are the first Player to flag the Obelisk, choose one adjacent Visitable Field and gain its reward.
-  \item Any Hero starting their turn on a Far Tile gains +1 \svgeven{movement}.
+  \item Any Hero starting their turn on a Far Tile gains +1 \svg{movement}.
   \item You may add any Additional Rules from other Scenarios.
 \end{itemize}
 
