--- a/draft-scenarios/clash/treasure_island.tex
+++ b/draft-scenarios/clash/treasure_island.tex
@@ -81,7 +81,7 @@ If there are three or more Players remainings at the end of \nth{12} Round, all 
 During this Scenario:
 
 \begin{itemize}
-  \item When a player Visits an Obelisk, they may choose to teleport to any other revealed Obelisk. If an Obelisk is not visible, it cannot be teleported to. Teleporting does not cost any \svgeven{movement}.
+  \item When a player Visits an Obelisk, they may choose to teleport to any other revealed Obelisk. If an Obelisk is not visible, it cannot be teleported to. Teleporting does not cost any \svg{movement}.
   \item Travel between islands is not possible other than Obelisks; e.g. Dimension Door, Angel Wings, and similar effects may not be used to travel between islands.
   \item Place a Black Cube on all empty Fields on Treasure Island as Tiles are revealed. The first Hero to visit an empty Field with a Black Cube may remove the Black Cube in order to roll 1 \svg{treasure} or 1 \svg{resource}.
   \item The first time a Player defeats the Dragon Utopia in Neutral Combat, they may Recruit any defeated Neutral Unit for half its Recruitment cost. Place a Faction Cube on the Dragon Utopia to indicate Players that have taken this action.
