--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -73,7 +73,7 @@ When playing with the optional Victory Points from the Tournament book, the foll
 
 During Combat with Neutral Units in Clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the Combat Board, the player positioning the Neutral Units must do the same.
 
-Placing Neutral Units far apart only makes the other player waste \svgeven{movement}, which slows the game down.
+Placing Neutral Units far apart only makes the other player waste \svg{movement}, which slows the game down.
 The exception to this rule is when there are three Neutral \svg{unit_ground} or \svg{unit_flying} Units to position, as all of them must go to the front line.
 See examples that follow.
 
