--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -368,7 +368,7 @@ msgid ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have one, gain 6 \\svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.\n"
 "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
-"      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svgeven{movement}.\n"
+"      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svg{movement}.\n"
 "      \\item \\textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
@@ -389,7 +389,7 @@ msgid ""
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
 "  \\item Ignore Combat encounters on the Field with the Grail.\n"
 "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \\svgeven{movement} on the Field with the Grail.\n"
+"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \\svg{movement} on the Field with the Grail.\n"
 "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
 "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
@@ -408,7 +408,7 @@ msgstr ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1er Obélisque]} Vous gagnez un Héros Secondaire. Placez sa figurine sur cette Case. Si vous l'avez déjà, gagnez 6 \\svg{gold} à la place. Puis choisissez un Joueur ennemi qui défausse une carte au hasard de sa main.\n"
 "      \\item \\textbf{[2e Obélisque]} Augmentez vos revenus \\svg{gold}, \\svg{building_materials}, ou \\svg{valuables} d'un niveau.\n"
-"      \\item \\textbf{[3e Obélisque]} Lancez 2 \\svg{treasure} et en résoudre 1; puis, gagnez \\svg{morale_positive} et \\svgeven{movement}.\n"
+"      \\item \\textbf{[3e Obélisque]} Lancez 2 \\svg{treasure} et en résoudre 1; puis, gagnez \\svg{morale_positive} et \\svg{movement}.\n"
 "      \\item \\textbf{[4e Obélisque]} Retirez jusque 4 Cartes de votre main, sauf Carte Statistique; puis, fouillez chaque deck correspondant pour une carte de votre choix.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifier]} Retirez une Unité de Faction * depuis votre Deck d'Unité pour:\n"
@@ -430,7 +430,7 @@ msgstr ""
 "  \\item Un Joueur peut utiliser son Deck de Might \\& Magic en payant pour défendre sa Ville de Faction.\n"
 "  \\item Ignorez les Combats sur la case du Graal.\n"
 "  \\item Un Joueur ne peut pas Visiter le Graal à moins d'avoir Visité au moins deux Obélisques ou que le Jeton Graal a été pris par un autre Joueur au moins une fois.\n"
-"  \\item Pour obtenir le Jeton Graal, un Héros doit dépenser  2 \\svgeven{movement} sur la case avec le Graal.\n"
+"  \\item Pour obtenir le Jeton Graal, un Héros doit dépenser  2 \\svg{movement} sur la case avec le Graal.\n"
 "  \\item Un Joueur sans le titre «\\textcolor{darkcandyapplered}{Chevalier Sanglant}», doit immédiatement Retirer une Carte Unité de Faction de son Deck d'Unité après avoir obtenu le Graal. Cet effet ne s'applique qu'une fois par Joueur.\n"
 "  \\item Si un autre Héros bat le Héros avec le Graal, il lui prend le Jeton Graal.\n"
 "  \\item Si un Joueur avec le Graal se Rend, le Jeton Graal est posé sur la case du Héros qui s'est Rendu.\n"
