--- a/translations/bloody_grail.tex/pl.po
+++ b/translations/bloody_grail.tex/pl.po
@@ -370,7 +370,7 @@ msgid ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1st Obelisk]} You gain a Secondary Hero. Place their model on this Field. If you already have one, gain 6 \\svg{gold} instead. Then, choose one enemy player to discard 1 random Card from their hand.\n"
 "      \\item \\textbf{[2nd Obelisk]} Increase your \\svg{gold}, \\svg{building_materials}, or \\svg{valuables} income by 1 step.\n"
-"      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svgeven{movement}.\n"
+"      \\item \\textbf{[3rd Obelisk]} Roll 2 \\svg{treasure} and choose 1 to resolve; then, gain \\svg{morale_positive} and \\svg{movement}.\n"
 "      \\item \\textbf{[4th Obelisk]} Remove up to 4 Cards from your hand, except Statistic Cards; then, search each corresponding Deck for a Card of your choice and put it in your hand.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Sacrifice]} Remove a * Faction Unit Card from your Unit Deck in exchange for:\n"
@@ -391,7 +391,7 @@ msgid ""
 "  \\item Players can use their Deck of Might \\& Magic when paying gold to defend their Faction Town.\n"
 "  \\item Ignore Combat encounters on the Field with the Grail.\n"
 "  \\item Players may not Visit the Field with the Grail Token unless they have already Visited at least two Obelisks or the Grail Token has been taken by any Hero at least once.\n"
-"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \\svgeven{movement} on the Field with the Grail.\n"
+"  \\item To obtain the Grail Token, a player’s Hero must spend 2 \\svg{movement} on the Field with the Grail.\n"
 "  \\item If a player does not possess the title of ``\\textcolor{darkcandyapplered}{Blood Knight},'' they must Remove a Faction Unit Card from their Unit Deck immediately after obtaining the Grail Token. This effect can only occur once per player.\n"
 "  \\item If another Hero defeats the Hero with the Grail Token, they also take the Grail Token.\n"
 "  \\item If a Hero with the Grail Token Surrenders, the Grail Token is placed on the hex where the Hero Surrendered.\n"
@@ -410,7 +410,7 @@ msgstr ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1. Obelisk]} Zyskujesz Bohatera Pomocnizego. Umieść jego figurkę na tym Polu. Jeśli już masz Bohatera Pomocniczego, zyskaj 6 \\svg{gold}. Następnie wybierz wrogiego gracza, aby odrzucił 1 losową Kartę ze swojej ręki.\n"
 "      \\item \\textbf{[2. Obelisk]} Zwiększ swoje dochody \\svg{gold}, \\svg{building_materials}, lub \\svg{valuables} o 1 krok.\n"
-"      \\item \\textbf{[3. Obelisk]} Rzuć 2 \\svg{treasure} i rozpatrz 1; następnie otrzymaj \\svg{morale_positive} i \\svgeven{movement}.\n"
+"      \\item \\textbf{[3. Obelisk]} Rzuć 2 \\svg{treasure} i rozpatrz 1; następnie otrzymaj \\svg{morale_positive} i \\svg{movement}.\n"
 "      \\item \\textbf{[4. Obelisk]} Usuń do 4 Kart ze swojej ręki, z wyjątkiem Kart Statystyk; następnie przeszukaj każdą odpowiednią Talię i wybierz Kartę, którą dodasz do swojej ręki.\n"
 "    \\end{enumerate}\n"
 "    \\columnbreak\n"
@@ -432,7 +432,7 @@ msgstr ""
 "  \\item Gracze mogą używać swojej Talii Mocy i Magii, gdy płacą złoto za obronę Miasta swojej Frakcji.\n"
 "  \\item Zignoruj walkę z Jednostkami Neutralnymi na polu z Graalem.\n"
 "  \\item Gracze nie mogą odwiedzać pola z Żetonem Graala, chyba że wcześniej odwiedzili co najmniej dwa Obeliski lub Żeton Graala został zdobyty przez jakiegokolwiek Bohatera przynajmniej raz.\n"
-"  \\item Aby zdobyć Żeton Graala, Bohater musi wydać 2 \\svgeven{movement} na polu z Graalem.\n"
+"  \\item Aby zdobyć Żeton Graala, Bohater musi wydać 2 \\svg{movement} na polu z Graalem.\n"
 "  \\item Jeśli gracz nie posiada tytułu ,,\\textcolor{darkcandyapplered}{Rycerza Krwi}'', musi usunąć Kartę Jednostki Frakcji ze swojej Talii Jednostek natychmiast po zdobyciu Żetonu Graala. Ten efekt występuje tylko raz na gracza.\n"
 "  \\item Jeśli inny Bohater pokona Bohatera z Żetonem Graala, wygrany przechwytuje Żeton.\n"
 "  \\item Jeśli Bohater z Żetonem Graala podda się, Żeton Graala zostaje umieszczony na polu, na którym Bohater się poddał.\n"
