--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -332,13 +332,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{5} and \\nth{9} Rounds (2-player Scenario only):}\n"
 "\\begin{itemize}\n"
-"  \\item The second player gains 1 \\svgeven{movement}.\n"
+"  \\item The second player gains 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Rundy 5. i 9. (tylko Scenariusz dla 2 graczy):}\n"
 "\\begin{itemize}\n"
-"  \\item Drugi gracz zyskuje 1 \\svgeven{movement}.\n"
+"  \\item Drugi gracz zyskuje 1 \\svg{movement}.\n"
 "\\end{itemize}\n"
 "\n"
 
