--- a/translations/inferno_deal_with_the_devil.tex/pl.po
+++ b/translations/inferno_deal_with_the_devil.tex/pl.po
@@ -614,13 +614,13 @@ msgid ""
 "\\textbf{\\nth{12} Round:}\n"
 "\\begin{itemize}\n"
 "  \\item The Final Charging Enemy Army appears on the Settlement Field of the F3 Tile.\n"
-"    This army has 4 \\svgeven{movement} per Turn.\n"
+"    This army has 4 \\svg{movement} per Turn.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{12. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Ostatnia Szarżująca Armia pojawia się Osadzie Kafelka F3. Ta armia ma 4 \\svgeven{movement} na turę.\n"
+"  \\item Ostatnia Szarżująca Armia pojawia się Osadzie Kafelka F3. Ta armia ma 4 \\svg{movement} na turę.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -670,10 +670,10 @@ msgid ""
 "    your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city\n"
 "    of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points\n"
 "    you have, lose 3 \\svg{gold}, gain \\svg{morale_negative}, and randomly discard 1 Card from your hand.\n"
-"  \\item Enemy Charging Heroes move only 2 \\svgeven{movement}. The Final Charging Army moves 4 \\svgeven{movement}. They take the shortest\n"
+"  \\item Enemy Charging Heroes move only 2 \\svg{movement}. The Final Charging Army moves 4 \\svg{movement}. They take the shortest\n"
 "    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not\n"
 "    ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything\n"
-"    else. They also make use of Stables 1 \\svgeven{movement} bonus.\n"
+"    else. They also make use of Stables 1 \\svg{movement} bonus.\n"
 "  \\item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each\n"
 "    other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.\n"
 "  \\item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy\n"
@@ -698,7 +698,7 @@ msgstr ""
 "    swoim mieście Inferno Kleesive), lub jeśli Szarżująca Armia zaatakuje Kleesive, a Ty nie jesteś obecny w swoim mieście\n"
 "    Kleesive, natychmiast zostajesz przeniesiony z powrotem do Kleesive, tracisz wszystkie pozostałe Punkty Ruchu,\n"
 "    tracisz 3 \\svg{gold}, otrzymujesz \\svg{morale_negative} i losowo odrzucasz 1 Kartę z ręki.\n"
-"  \\item Szarżujące Armie poruszają się tylko 2 \\svgeven{movement}. Ostatnia Szarżująca Armia porusza się 4 \\svgeven{movement}. Podążają najkrótszą\n"
+"  \\item Szarżujące Armie poruszają się tylko 2 \\svg{movement}. Ostatnia Szarżująca Armia porusza się 4 \\svg{movement}. Podążają najkrótszą\n"
 "    drogą do Kleesive. Jeśli posiadasz Kopalnię na Kafelku mapy, na który wchodzą, przejmą Kopalnię (ale nie ,,wrócą się'' po nią),\n"
 "    a następnie kontynuują najkrótszą drogę do Kleesive. Ignorują wszystko inne. Korzystają także z bonusu 1 Punktu Ruchu ze Stajni.\n"
 "  \\item Szarżujące Armie zawsze poruszają się tak, aby nie ,,blokować'' sobie nawzajem dróg (spowalniając się nawzajem).\n"
