--- a/translations/the_fractured_kingdoms.tex/pl.po
+++ b/translations/the_fractured_kingdoms.tex/pl.po
@@ -285,14 +285,14 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Each \\svg[12]{movement_token_green} in the map layout is a one-way monolith.\n"
-"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svgeven{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
+"    Any Hero on the Field an \\svg[12]{movement_token_green} points away from can pay 1 \\svg{movement} to go to the Field that \\svg[12]{movement_token_green} is pointing to.\n"
 "  \\item You can defend your Town with your Hero if you have your Main Hero on your Starting (I) Map Tile.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Każdy \\svg[12]{movement_token_green} w układzie mapy jest jednokierunkowym monolitem.\n"
-"    Będąc na Polu, z którego wychodzi \\svg[12]{movement_token_green}, możesz wydać 1~\\svgeven{movement}, aby przejść na wskazywane przez \\svg[12]{movement_token_green} Pole.\n"
+"    Będąc na Polu, z którego wychodzi \\svg[12]{movement_token_green}, możesz wydać 1~\\svg{movement}, aby przejść na wskazywane przez \\svg[12]{movement_token_green} Pole.\n"
 "  \\item Możesz bronić swojego Miasta swoim Bohaterem, jeśli twój Bohater Główny znajduę się na Początkowym Kafelku Mapy.\n"
 "\\end{itemize}\n"
 "\n"
@@ -324,10 +324,10 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Optional Rules}}\n"
 "\\begin{itemize}\n"
 "  \\item All \\svg[12]{movement_token_green} indicate two-way monoliths instead of one-way.\n"
-"    Heroes can travel in either direction by paying 1~\\svgeven{movement}.\n"
+"    Heroes can travel in either direction by paying 1~\\svg{movement}.\n"
 "  \\item The monoliths start inactive (place them the inactive \\svg[12]{movement_token_red} side up).\n"
-"    Heroes must pay 1~\\svg{building_materials} and 1~\\svgeven{movement} to activate them.\n"
-"  \\item Heroes can destroy monoliths by paying 1~\\svgeven{movement}.\n"
+"    Heroes must pay 1~\\svg{building_materials} and 1~\\svg{movement} to activate them.\n"
+"  \\item Heroes can destroy monoliths by paying 1~\\svg{movement}.\n"
 "    Flip a destroyed monolith to the \\svg[12]{movement_token_red} side up.\n"
 "\\end{itemize}\n"
 "\n"
@@ -335,10 +335,10 @@ msgstr ""
 "\\subsection*{\\MakeUppercase{Opcjonalne Zasady}}\n"
 "\\begin{itemize}\n"
 "  \\item Wszystkie \\svg[12]{movement_token_green} są dwukierunkowe.\n"
-"    Bohaterowie mogą podróżować w dowolnym kierunku, wydając 1~\\svgeven{movement}.\n"
+"    Bohaterowie mogą podróżować w dowolnym kierunku, wydając 1~\\svg{movement}.\n"
 "  \\item Monolity są nieaktywne (umieść je nieaktywną stroną \\svg[12]{movement_token_red} do góry).\n"
-"    Musisz zapłacić 1~\\svg{building_materials} i 1~\\svgeven{movement}, aby je aktywować.\n"
-"  \\item Bohaterowie mogą niszczyć monolity, płacąc 1~\\svgeven{movement}.\n"
+"    Musisz zapłacić 1~\\svg{building_materials} i 1~\\svg{movement}, aby je aktywować.\n"
+"  \\item Bohaterowie mogą niszczyć monolity, płacąc 1~\\svg{movement}.\n"
 "    Odwróć zniszczony monolit \\svg[12]{movement_token_red} stroną do góry.\n"
 "\\end{itemize}\n"
 "\n"
